# telcoin-network

./: .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  TODOs  clippy.toml  delete-me.txt  local-testnet.sh  rustfmt.toml
crates/batch-builder/: Cargo.toml  README.md
crates/batch-builder/src/: error.rs  lib.rs
crates/batch-builder/tests/it/: build_batches.rs  main.rs
crates/common/adapters/: Cargo.toml
crates/common/adapters/src/: lib.rs
crates/common/keys/: Cargo.toml
crates/common/keys/src/: key_derive.rs  keypair_file.rs  keystore.rs  lib.rs
crates/common/keys/tests/: tests.rs
crates/common/types/: Cargo.toml  build.rs
crates/common/types/benches/: batch_digest.rs  recover_ecdsa_crit.rs  trie_root.rs  verify_certificate.rs
crates/common/types/proto/: narwhal.proto
crates/common/types/src/: lib.rs
crates/common/types/tests/: config_tests.rs  consensus_tests.rs  primary_tests.rs
crates/config/: Cargo.toml  README.md
crates/config/src/: config.rs  consensus.rs  genesis.rs  keys.rs  lib.rs  network.rs  node.rs  retry.rs  traits.rs
crates/consensus/config/: Cargo.toml
crates/consensus/config/src/: consensus_config.rs  key_config.rs  lib.rs
crates/consensus/consensus/: Cargo.toml
crates/consensus/consensus-metrics/: Cargo.toml
crates/consensus/consensus-metrics/src/: closure.rs  guards.rs  histogram.rs  lib.rs  metered_channel.rs  prometheus_closure.rs
crates/consensus/consensus/benches/: process_certificates.rs
crates/consensus/consensus/src/: bullshark.rs  consensus.rs  dag.rs  error.rs  lib.rs  metrics.rs  round.rs  state.rs  utils.rs
crates/consensus/executor/: Cargo.toml  README.md
crates/consensus/executor/src/: errors.rs  lib.rs  metrics.rs  state.rs  subscriber.rs
crates/consensus/executor/tests/: consensus_integration_tests.rs
crates/consensus/lattice-common/: Cargo.toml
crates/consensus/lattice-common/src/: lib.rs
crates/consensus/lattice-macros/: Cargo.toml
crates/consensus/lattice-macros/src/: lib.rs
crates/consensus/lattice-proc-macros/: Cargo.toml
crates/consensus/lattice-proc-macros/src/: lib.rs
crates/consensus/mem-utils/: Cargo.toml  README.md
crates/consensus/mem-utils/src/: external_impls.rs  lib.rs  malloc_size.rs
crates/consensus/mem-utils/tests/: derive.rs
crates/consensus/network/: Cargo.toml
crates/consensus/network-types/: Cargo.toml  build.rs
crates/consensus/network-types/proto/: narwhal.proto
crates/consensus/network-types/src/: notify.rs  proto.rs  request.rs  response.rs
crates/consensus/network/src/: admin.rs  anemo_ext.rs  client.rs  connectivity.rs  epoch_filter.rs  error.rs  failpoints.rs  lib.rs  local.rs  metrics.rs  p2p.rs  retry.rs  traits.rs
crates/consensus/node/: Cargo.toml
crates/consensus/node/src/: OLDbenchmark_client.rs  OLDmain.rs  benchmark_client.rs  error.rs  execution_state.rs  generate_format.rs  lib.rs  main-old.rs  main.rs  manager.rs  metrics.rs  primary_node.rs  worker_node.rs
crates/consensus/node/tests/: formats.rs  node_smoke_test.rs  node_test.rs
crates/consensus/primary-metrics/: Cargo.toml
crates/consensus/primary-metrics/src/: consensus.rs  executor_metrics.rs  lib.rs  metrics.rs
crates/engine/: Cargo.toml  README.md
crates/engine/src/: error.rs  lib.rs  payload_builder.rs
crates/engine/tests/it/: main.rs
crates/network/: Cargo.toml  README.md
crates/network-libp2p/: Cargo.toml  README.md
crates/network-libp2p/src/: README.md  codec.rs  consensus.rs  error.rs  helpers.rs  kad.rs  lib.rs  publish.rs  subscribe.rs  types.rs
crates/network-libp2p/src/messages/: inner.rs  mod.rs  primary.rs  worker.rs
crates/network-libp2p/src/peers/: README.md  all_peers.rs  banned.rs  behavior.rs  cache.rs  manager.rs  peer.rs  score.rs  status.rs  types.rs
crates/network-libp2p/src/tests/: banned_peers.rs  cache_peers.rs  codec_tests.rs  common.rs  network_tests.rs  peer_manager.rs  peers.rs  tn_codec_tests.rs  types.rs
crates/network-types/: Cargo.toml  build.rs
crates/network-types/src/: codec.rs  lib.rs  local.rs  notify.rs  proto.rs  request.rs  response.rs  retry.rs
crates/network/src/: admin.rs  anemo_ext.rs  connectivity.rs  epoch_filter.rs  error.rs  failpoints.rs  lib.rs  local.rs  metrics.rs  p2p.rs  traits.rs
crates/network/src/test_utils/: mod.rs  primary.rs  worker.rs
crates/node/: Cargo.toml  README.md
crates/node/src/: dirs.rs  error.rs  lib.rs  manager.rs  metrics.rs  persist_consensus.rs  primary.rs  worker.rs
crates/node/src/engine/: builder.rs  inner.rs  mod.rs  worker.rs
crates/state-sync/: Cargo.toml  README.md
crates/state-sync/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: layered_db.rs  lib.rs  mem_db.rs  traits.rs
crates/storage/src/mdbx/: database.rs  metrics.rs  mod.rs
crates/storage/src/redb/: database.rs  metrics.rs  mod.rs  wraps.rs
crates/storage/src/rocks/: database.rs  errors.rs  iter.rs  metrics.rs  mod.rs  tests.rs  util.rs
crates/storage/src/stores/: certificate_store.rs  consensus_store.rs  mod.rs  node_store.rs  payload_store.rs  proposer_store.rs  vote_digest_store.rs
crates/test-utils/: Cargo.toml
crates/test-utils/benches/: batch_digest.rs  verify_certificate.rs
crates/test-utils/src/: authority.rs  builder.rs  cluster.rs  committee.rs  execution.rs  helpers.rs  lib.rs  primary.rs  storage_tests.rs  temp_dirs.rs  tracing.rs  worker.rs
crates/test-utils/src/tests/: cluster_tests.rs  (+2 more)
crates/tn-reth/: Cargo.toml  README.md
crates/tn-reth/src/: dirs.rs  error.rs  evm_config.rs  lib.rs  payload.rs  rpc_server_args.rs  system_calls.rs  test_utils.rs  traits.rs  txn_pool.rs  worker.rs
crates/tn-types/: Cargo.toml
crates/tn-types/src/: error.rs  genesis.rs  lib.rs  notifier.rs  sync.rs
crates/tn-utils/: Cargo.toml
crates/tn-utils/src/: lib.rs  macros.rs
crates/types/: Cargo.toml
crates/types/src/: codec.rs  committee.rs  database_traits.rs  engine.rs  error.rs  gas_accumulator.rs  genesis.rs  helpers.rs  lib.rs  multiaddr.rs  notifier.rs  serde.rs  sync.rs  task_manager.rs
(+1148 files in other folders)
