[package]
name = "tn-network-libp2p"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
libp2p = { workspace = true, features = [
    "request-response",
    "gossipsub",
    "tokio",
    "quic",
    "macros",
] }
tokio = { workspace = true, features = ["rt", "net", "sync", "macros", "time"] }
tn-types = { workspace = true }
tn-config = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

# req/res requires async_trait
async-trait = { workspace = true }
bcs = { workspace = true }
snap = { workspace = true }

# peer manager
rand = { workspace = true }
serde_with = { workspace = true }

[dev-dependencies]
tn-test-utils = { workspace = true }
eyre = { workspace = true }
assert_matches = { workspace = true }
tn-storage = { workspace = true }

[lints]
workspace = true
